[package]
name = "service_book"
version = "0.1.2"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"

description = "Types and functions to be used with a service discovery protocol"
license = "GPL-3.0-or-later"
repository = "https://github.com/EnsicoinDevs/service_book"


[dependencies]
uuid = { version = "0.7.4", features = ["serde"] }
serde = { version = "1.0.98", features = ["derive"] }
reqwest = { version = "0.9.19", optional = true }

[features]

discover = ["reqwest"]
